<resources>
    <string name="app_name">ExampleRealmMVP</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="add">add</string>
    <string name="publisher">Publisher</string>
    <string name="book_details">Book details</string>
    <string name="add_new_book">Add new book</string>
    <string name="publisher_books">Publisher books</string>
    <string name="author_books">Author books</string>
    <string name="add_new_book_error">Cannot add new book</string>
</resources>
